# gptui

./: Cargo.toml
src/: config.rs  io.rs  main.rs  prompt.rs
