[package]
name = "gptui"
version = "0.1.0"
edition = "2021"

[dependencies]
# chatgpt_rs = { version = "1.1.1", features = ["streams"] }
chatgpt_rs = { version = "1.1.1", features = ["streams"], git = "https://github.com/einsli/chatgpt_rs", branch = "stream-bug-fix" }
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
futures-util = "0.3.28"
nu-ansi-term = "0.47.0"
reedline = { version = "0.18.0", git = "https://github.com/xiuxiu62/reedline" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
syntect = "5.0.0"
tokio = { version = "1.27.0", features = ["full"] }
whoami = { version = "1.4.0", default-features = false }
